# Aiagent

./: .env.example  .gitignore  Dockerfile  INSTALL.md  LICENSE  Makefile  README.md  SETUP.md  admin.sh  dashboard_login.php  dashboard_main.php  docker-compose.yml  install.sh  pyproject.toml  requirements.txt  run.py  setup.sh
asterisk/: ari.conf
config/: config.example.yaml
dashboard/: db.php  manage_customers.php  manage_faqs.php  manage_scripts.php  save_settings.php  system_status.php
docs/: API.md  ASTERISK_SETUP.md  ENGINE_COMPARISON.md  GERMAN_CALL_SCRIPTS.md  QUICK_REFERENCE.md  VOICE_API_REFACTORING.md
examples/: asterisk_demo.py  basic_usage.py  complete_demo.py  voice_engine_examples.py
logs/: README.md
models/: README.md
recordings/: README.md
sql/: schema.sql
src/: __init__.py  config.py  main.py
src/conversation/: __init__.py  emotion_recognition.py  manager.py  state_machine.py
src/database/: __init__.py  models.py  operations.py
src/speech/: __init__.py  base.py  stt.py  stt_azure.py  stt_deepgram.py  stt_google.py  tts.py  tts_azure.py  tts_elevenlabs.py  tts_google.py
src/telephony/: __init__.py  asterisk.py
src/training/: __init__.py  continuous_improvement.py
tests/: __init__.py  test_voice_engines.py
tests/integration/: test_system.py
tests/unit/: test_basic.py
