[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-cold-calling-agent"
version = "1.0.0"
description = "AI-powered cold calling agent with speech processing and emotion recognition"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "AI Cold Calling Agent Team"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Communications :: Telephony",
]
requires-python = ">=3.8"
dependencies = [
    "asyncio",
    "SQLAlchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "mysql-connector-python>=8.0.0",
    "alembic>=1.12.0",
    "openai-whisper>=20231117",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "TTS>=0.17.0",
    "mimic3-tts>=0.2.3",
    "pyaudio>=0.2.11",
    "pydub>=0.25.1",
    "soundfile>=0.12.1",
    "librosa>=0.10.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "transformers>=4.35.0",
    "sentiment-analysis>=0.1.0",
    "fer>=22.5.1",
    "opencv-python>=4.8.0",
    "PyYAML>=6.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "transitions>=0.9.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.9.0",
    "flake8>=6.1.0",
    "mypy>=1.6.0",
]

[project.scripts]
aiagent = "src.main:main"

[project.urls]
Homepage = "https://github.com/Pormetrixx/Aiagent"
Repository = "https://github.com/Pormetrixx/Aiagent"
Issues = "https://github.com/Pormetrixx/Aiagent/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"